--- a/Items.html
+++ b/Items.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dom.css">
     <title>Item Lister</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
 
     </div>
 </header> 
-<div class="container">
+<div class="container2">
     <div id="main" class = "card card-body">
     <h2 class="title">Add Items</h2>
 <form class="form-inline mb-3">
