--- a/Items.html
+++ b/Items.html
@@ -14,7 +14,7 @@
 
     </div>
 </header> 
-<div class="container2">
+    <div class="container2">
     <div id="main" class = "card card-body">
     <h2 class="title">Add Items</h2>
 <form class="form-inline mb-3">
@@ -29,6 +29,7 @@
     <li class="list-group-item">Item 4</li>
     <li>Item 5</li>
 </ul>
+<span></span>
 </div>
 </div> 
 <script src="dom.js"></script>
