--- a/Items.html
+++ b/Items.html
@@ -30,10 +30,10 @@
         </form>
         <h2 class="title">Items</h2>
         <ul id="items" class="list-group">
-          <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button><button>Edit</button></li>
-          <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button><button>Edit</button></li>
-          <li class="list-group-item">Item 3 <button class="btn btn-danger btn-sm float-right delete">X</button><button>Edit</button></li>
-          <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button><button>Edit</button></li>
+         <dl> <li class="list-group-item"><dt>Item 1</dt><dd>description of item 1</dd><button class="btn btn-danger btn-sm float-right delete">X</button><span></span><button>Edit</button></li></dl>
+         <dl> <li class="list-group-item"><dt>Item 2</dt><dd>description of item 2</dd><button class="btn btn-danger btn-sm float-right delete">X</button><button>Edit</button></li></dl>
+         <dl> <li class="list-group-item"><dt>Item 3</dt><dd>description of item 3</dd><button class="btn btn-danger btn-sm float-right delete">X</button><button>Edit</button></li></dl>
+         <dl> <li class="list-group-item"><dt>Item 4</dt><dd>description of item 4</dd><button class="btn btn-danger btn-sm float-right delete">X</button><button>Edit</button></li></dl>
         </ul>
        </div>
       </div>
